refactor: return sorted lists from app, print in UI